# hindsight-clients/go/model_operation_status_response.go
@@ -30,6 +30,7 @@ type OperationStatusResponse struct {
 	ErrorMessage NullableString `json:"error_message,omitempty"`
 	ResultMetadata map[string]interface{} `json:"result_metadata,omitempty"`
 	ChildOperations []ChildOperationStatus `json:"child_operations,omitempty"`
+	TaskPayload map[string]interface{} `json:"task_payload,omitempty"`
 }
 
 type _OperationStatusResponse OperationStatusResponse
@@ -377,6 +378,39 @@ func (o *OperationStatusResponse) SetChildOperations(v []ChildOperationStatus) {
 	o.ChildOperations = v
 }
 
+// GetTaskPayload returns the TaskPayload field value if set, zero value otherwise (both if not set or set to explicit null).
+func (o *OperationStatusResponse) GetTaskPayload() map[string]interface{} {
+	if o == nil {
+		var ret map[string]interface{}
+		return ret
+	}
+	return o.TaskPayload
+}
+
+// GetTaskPayloadOk returns a tuple with the TaskPayload field value if set, nil otherwise
+// and a boolean to check if the value has been set.
+// NOTE: If the value is an explicit nil, `nil, true` will be returned
+func (o *OperationStatusResponse) GetTaskPayloadOk() (map[string]interface{}, bool) {
+	if o == nil || IsNil(o.TaskPayload) {
+		return map[string]interface{}{}, false
+	}
+	return o.TaskPayload, true
+}
+
+// HasTaskPayload returns a boolean if a field has been set.
+func (o *OperationStatusResponse) HasTaskPayload() bool {
+	if o != nil && !IsNil(o.TaskPayload) {
+		return true
+	}
+
+	return false
+}
+
+// SetTaskPayload gets a reference to the given map[string]interface{} and assigns it to the TaskPayload field.
+func (o *OperationStatusResponse) SetTaskPayload(v map[string]interface{}) {
+	o.TaskPayload = v
+}
+
 func (o OperationStatusResponse) MarshalJSON() ([]byte, error) {
 	toSerialize,err := o.ToMap()
 	if err != nil {
@@ -409,6 +443,9 @@ func (o OperationStatusResponse) ToMap() (map[string]interface{}, error) {
 	}
 	if o.ChildOperations != nil {
 		toSerialize["child_operations"] = o.ChildOperations
+	}
+	if o.TaskPayload != nil {
+		toSerialize["task_payload"] = o.TaskPayload
 	}
 	return toSerialize, nil
 }
